# atc_hdlc

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/hooks/: check_compile.sh
doc/: REFACTOR_PLAN.md  hdlc_architecture_context.md  refactor_plan.md
example/: CMakeLists.txt
example/bare_metal_template/: bare_metal_template.c
example/loopback/: loopback.c
example/minimal_ui/: minimal_ui.c
inc/: hdlc.h  hdlc_config.h  hdlc_types.h
inc/atc_hdlc/: hdlc.h  hdlc_config.h  hdlc_types.h
src/: CMakeLists.txt  hdlc.c  hdlc_crc.c  hdlc_crc.h  hdlc_dispatch.c  hdlc_frame.c  hdlc_frame.h  hdlc_frame_handlers.c  hdlc_in.c  hdlc_input.c  hdlc_out.c  hdlc_output.c  hdlc_private.h  hdlc_station.c
src/frame/: hdlc_crc.c  hdlc_crc.h  hdlc_frame.c
src/station/: hdlc_frame_handlers.c  hdlc_in.c  hdlc_input.c  hdlc_out.c  hdlc_output.c  hdlc_station.c
test/: CMakeLists.txt  README.md  connection_management.c  error_codes.c  hdlc.c  hdlc_test.c  init_validation.c  physical_target.c  reliable_transmission.c  test_common.c  test_common.h  test_connection_management.c  test_connection_state.c  test_error_codes.c  test_hdlc.c  test_init_validation.c  test_physical_target.c  test_reliable_transmission.c  test_ui_frames.c  test_virtual_com.c  test_virtual_pipe.c  test_virtual_pipe.h  virtual_com.c
test/helpers/: common.c  common.h  virtual_pipe.c
test/integration/: CMakeLists.txt  physical_target.c  virtual_com.c
test/mcu_test/: README.md  hdlc_mcu_port.c  hdlc_mcu_port.h  hdlc_platform.h
test/mcu_test_template/: README.md  hdlc_mcu_port.c  hdlc_mcu_port.h  hdlc_platform.h
test/stm32_hdlc/: .cproject  .gitignore  .mxproject  .project  stm32_hdlc.ioc
test/stm32_hdlc/Core/Inc/: stm32wlxx_it.h
test/stm32_hdlc/Core/Src/: main.c  stm32wlxx_hal_msp.c  stm32wlxx_it.c
test/unit/: CMakeLists.txt  connection_management.c  error_codes.c  hdlc.c  init_validation.c  reliable_transmission.c
