add_executable(hdlc_unit_test hdlc.c helpers/common.c)
target_link_libraries(hdlc_unit_test PRIVATE hdlc)
target_include_directories(hdlc_unit_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
add_test(NAME HDLC_Unit_Tests COMMAND hdlc_unit_test)
set_tests_properties(HDLC_Unit_Tests PROPERTIES LABELS "fast")

add_executable(connection_management connection_management.c helpers/common.c)
target_link_libraries(connection_management PRIVATE hdlc)
target_include_directories(connection_management PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
add_test(NAME ConnectionManagementTest COMMAND connection_management)
set_tests_properties(ConnectionManagementTest PROPERTIES LABELS "fast")

add_executable(reliable_transmission reliable_transmission.c helpers/common.c)
target_link_libraries(reliable_transmission PRIVATE hdlc)
target_include_directories(reliable_transmission PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
add_test(NAME ReliableTransmissionTest COMMAND reliable_transmission)
set_tests_properties(ReliableTransmissionTest PROPERTIES LABELS "fast")

add_executable(init_validation init_validation.c helpers/common.c)
target_link_libraries(init_validation PRIVATE hdlc)
target_include_directories(init_validation PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
add_test(NAME InitValidationTest COMMAND init_validation)
set_tests_properties(InitValidationTest PROPERTIES LABELS "fast")

add_executable(error_codes error_codes.c helpers/common.c)
target_link_libraries(error_codes PRIVATE hdlc)
target_include_directories(error_codes PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
add_test(NAME ErrorCodeTest COMMAND error_codes)
set_tests_properties(ErrorCodeTest PROPERTIES LABELS "fast")

find_package(Threads REQUIRED)
add_executable(virtual_com virtual_com.c helpers/common.c helpers/virtual_pipe.c)
target_link_libraries(virtual_com PRIVATE hdlc Threads::Threads)
target_include_directories(virtual_com PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_definitions(virtual_com PRIVATE TEST_DATA_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
add_test(NAME VirtualComTest COMMAND virtual_com)
set_tests_properties(VirtualComTest PROPERTIES LABELS "fast")

add_executable(physical_target physical_target.c helpers/common.c)
target_link_libraries(physical_target PRIVATE hdlc Threads::Threads)
target_include_directories(physical_target PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_definitions(physical_target PRIVATE TEST_DATA_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
add_test(NAME PhysicalTargetTest COMMAND physical_target)
set_tests_properties(PhysicalTargetTest PROPERTIES LABELS "slow")
